# Loewe_scent_finder

./: .env.example  README.md  config.py  demo_recommender.py  intent.py  intent_config.py  main.py  pyproject.toml  requirements.txt  response_handlers  retrieval.py
Loewe_scent_finder_chatbot/: __init__.py  config.py  handlers  handlers.py  intent.py  intent_config.py  main.py  retrieval.py
Loewe_scent_finder_chatbot/data/: merged_output (1).json  merged_output.json
Loewe_scent_finder_chatbot/similarity_map/: compute_axis_scores.py  compute_hybrid_similarity.py  dedupe_perfumes.py  loewe_perfumes_clean.csv  loewe_perfumes_deduped.json
data/: olfactory_terms_long.pkl  perfumes.json  scents.pkl
recommender/: rerank.py  similarity.py  utils.py
