[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loewe-scent-finder"
version = "0.1.0"
description = "CLI perfume recommendation chatbot"
requires-python = ">=3.9"

dependencies = [
  "langchain",
  "langchain-core",
  "langchain-google-genai",
  "langchain-community",
  "rank-bm25",
  "faiss-cpu",
  "python-dotenv",
  "numpy"
]

[project.optional-dependencies]
colab = [
  "requests==2.32.4",
  "google-auth==2.47.0",
  "pydantic==2.12.3",
  "cryptography<44",
  "numpy<2.2"
]

[tool.setuptools]
packages = ["Loewe_scent_finder_chatbot"]



